--- a/dedicated destinations/peru/p.html
+++ b/dedicated destinations/peru/p.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -55,7 +56,8 @@
         <!---Image Slider----->
         <div class="slider">
             <div class="img-box">
-                <img src="../../img/willian-justen-de-vasconcellos-4hMET7vYTAQ-unsplash.jpg" alt="trip" height="250" width="45" alt="" class="slider-img">
+                <img src="../../img/willian-justen-de-vasconcellos-4hMET7vYTAQ-unsplash.jpg" alt="trip" height="250"
+                    width="45" alt="" class="slider-img">
             </div>
 
             <!-- Next and Previous Buttons
@@ -66,10 +68,17 @@
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> About their Food </h3>
                 <p>
-                    The main staple of a Perúvian <strong> breakfast</strong> is café con leche, coffee with milk. Bread, cheese and marmalade also are served at breakfast. In Perú, the verb that goes with breakfast is tomar, which means “to take” or
-                    “to drink.” You don't “eat” breakfast in Perúvian Spanish. Supper usually consists of tea and bread. <br> Classic Peruvian <strong>lunch</strong> ideas include grilled yucca with huancaina sauce, tasty tenderstem and beef lomo saltado,
-                    and mouthwatering minced beef tamales. Enjoy an escapade to empanada-delight with cheesy chicken empanadas, turkey and black bean empanadas or chicken and bean puff pastry empanadas. <br> Some of the common main courses served for
-                    <strong>dinner</strong> in Peru include a tasty soup, lomo saltado, ají de gallina, pollo a la brasa, tacu tacu and arroz con pollo.
+                    The main staple of a Perúvian <strong> breakfast</strong> is café con leche, coffee with milk.
+                    Bread, cheese and marmalade also are served at breakfast. In Perú, the verb that goes with breakfast
+                    is tomar, which means “to take” or
+                    “to drink.” You don't “eat” breakfast in Perúvian Spanish. Supper usually consists of tea and bread.
+                    <br> Classic Peruvian <strong>lunch</strong> ideas include grilled yucca with huancaina sauce, tasty
+                    tenderstem and beef lomo saltado,
+                    and mouthwatering minced beef tamales. Enjoy an escapade to empanada-delight with cheesy chicken
+                    empanadas, turkey and black bean empanadas or chicken and bean puff pastry empanadas. <br> Some of
+                    the common main courses served for
+                    <strong>dinner</strong> in Peru include a tasty soup, lomo saltado, ají de gallina, pollo a la
+                    brasa, tacu tacu and arroz con pollo.
                 </p>
 
 
@@ -98,15 +107,22 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16137237.602564808!2d-85.70177939039293!3d-9.086044742128697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c850c05914f5%3A0xf29e011279210648!2sPeru!5e0!3m2!1sen!2sin!4v1717861765241!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16137237.602564808!2d-85.70177939039293!3d-9.086044742128697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c850c05914f5%3A0xf29e011279210648!2sPeru!5e0!3m2!1sen!2sin!4v1717861765241!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
-                <p>Peru is a country in South America that's home to a section of Amazon rainforest and Machu Picchu, an ancient Incan city high in the Andes mountains. The region around Machu Picchu, including the Sacred Valley, Inca Trail and colonial
-                    city of Cusco, is rich in archaeological sites. On Peru’s arid Pacific coast is Lima, the capital, with a preserved colonial center and important collections of pre-Columbian art. <br> <br> Peru is one of the richest countries in the
-                    world in terms of natural resources. Gold, silver, copper, zinc, lead, and iron are found across the country, and there are reserves of oil and natural gas.
+                <p>Peru is a country in South America that's home to a section of Amazon rainforest and Machu Picchu, an
+                    ancient Incan city high in the Andes mountains. The region around Machu Picchu, including the Sacred
+                    Valley, Inca Trail and colonial
+                    city of Cusco, is rich in archaeological sites. On Peru’s arid Pacific coast is Lima, the capital,
+                    with a preserved colonial center and important collections of pre-Columbian art. <br> <br> Peru is
+                    one of the richest countries in the
+                    world in terms of natural resources. Gold, silver, copper, zinc, lead, and iron are found across the
+                    country, and there are reserves of oil and natural gas.
                 </p>
             </div>
 
@@ -143,7 +159,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -166,11 +185,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
