--- a/dedicated-destinations/kashmir/start.html
+++ b/dedicated-destinations/kashmir/start.html
@@ -30,7 +30,8 @@
     --->
     <div class="nav-container">
         <nav class="newNav">
-            <a href="#" class="nav__logo" data-aos="fade-right" style="text-decoration: none;">Tourguide<span>.</span></a>
+            <a href="#" class="nav__logo" data-aos="fade-right"
+                style="text-decoration: none;">Tourguide<span>.</span></a>
 
             <ul class="navLinks">
                 <li class="link home" data-aos="fade-down"><a href="../../index.html">Home</a></li>
@@ -43,7 +44,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -67,7 +69,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
-                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad, shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
+                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad,
+                    shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
             </div>
 
             <div class="features">
@@ -97,8 +100,10 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3409223.777239477!2d70.51733100654995!3d33.44096611315532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e1092499ffa89d%3A0x6567a6d4697e7f1!2sJammu%20and%20Kashmir!5e0!3m2!1sen!2sin!4v1708024233393!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3409223.777239477!2d70.51733100654995!3d33.44096611315532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e1092499ffa89d%3A0x6567a6d4697e7f1!2sJammu%20and%20Kashmir!5e0!3m2!1sen!2sin!4v1708024233393!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
 
@@ -119,18 +124,28 @@
                     <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
 
                         <p class="w3-text-grey">
-                            <p>Kashmir is the northernmost geographical region of the Indian subcontinent. Until the mid-19th century, the term "Kashmir" denoted only the Kashmir Valley between the Great Himalayas and the Pir Panjal Range.Here's a comprehensive
-                                overview of tourism in Kashmir:
-                                <br><br>
-                                <b>Climate </b>: The climate of Jammu and Kashmir varies with altitude and across regions. Southern and southwestern areas have a sub tropical climate, with hot summers and cool winters. This region receives most of its
-                                rainfall during the monsoon season. In the east and north, summers are usually pleasant. The effect of the monsoon diminishes in areas lying to the leeward side of the Pir Panjal, such as the Kashmir valley, and much of
-                                the rainfall happens in the spring season due to western disturbances. Winters are cold, with temperatures reaching sub-zero levels. Snowfall is common in the valley and the mountain areas.
-                                <br><br>
-                                <b>Best place</b>:Some major tourist attractions in Jammu and Kashmir are Srinagar, the Mughal Gardens, Gulmarg, Pahalgam, Patnitop, Bhaderwah and Jammu. Every year, thousands of Hindu pilgrims visit holy shrines of Vaishno
-                                Devi and Amarnath which has had significant impact on the state's economy.[107]
+                        <p>Kashmir is the northernmost geographical region of the Indian subcontinent. Until the
+                            mid-19th century, the term "Kashmir" denoted only the Kashmir Valley between the Great
+                            Himalayas and the Pir Panjal Range.Here's a comprehensive
+                            overview of tourism in Kashmir:
+                            <br><br>
+                            <b>Climate </b>: The climate of Jammu and Kashmir varies with altitude and across regions.
+                            Southern and southwestern areas have a sub tropical climate, with hot summers and cool
+                            winters. This region receives most of its
+                            rainfall during the monsoon season. In the east and north, summers are usually pleasant. The
+                            effect of the monsoon diminishes in areas lying to the leeward side of the Pir Panjal, such
+                            as the Kashmir valley, and much of
+                            the rainfall happens in the spring season due to western disturbances. Winters are cold,
+                            with temperatures reaching sub-zero levels. Snowfall is common in the valley and the
+                            mountain areas.
+                            <br><br>
+                            <b>Best place</b>:Some major tourist attractions in Jammu and Kashmir are Srinagar, the
+                            Mughal Gardens, Gulmarg, Pahalgam, Patnitop, Bhaderwah and Jammu. Every year, thousands of
+                            Hindu pilgrims visit holy shrines of Vaishno
+                            Devi and Amarnath which has had significant impact on the state's economy.[107]
 
 
-                            </p>
+                        </p>
 
 
                     </div>
@@ -221,7 +236,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -244,11 +262,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
